--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
-# Created by https://www.toptal.com/developers/gitignore/api/pycharm
-# Edit at https://www.toptal.com/developers/gitignore?templates=pycharm
+# Byte-compiled / optimized / DLL files
+
+__pycache__/
+*.py[cod]
+
+
+출처: https://24hours-beginner.tistory.com/102 [365일 24시간 초보]
 
 ### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
